cleanup av testerna samt korrigerade tester som inte gav någon info