@@ -8,7 +8,6 @@ import org.junit.Test;
 
 import se.kth.iv1350.repairelectricbike.integration.*;
 
-import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -16,7 +15,6 @@ public class RepairOrderTest {
 
     private RegistryCreator creator;
     private CustomerDTO customerDTO;
-    private Customer customer;
     private RepairOrder repairOrder;
     private List<BikeDTO> bikes;
 
@@ -25,9 +23,8 @@ public class RepairOrderTest {
     @Before
     public void setUp() {
         creator = new RegistryCreator();
-        bikes = new ArrayList<BikeDTO>( List.of(new BikeDTO("Disktrasa", "Yes", "123Drygt")));
+        bikes = new ArrayList<>(List.of(new BikeDTO("Disktrasa", "Yes", "123Drygt")));
         customerDTO = new CustomerDTO("Frödinge", "ost@kaka.se", "112", bikes);
-        customer = new Customer(customerDTO);
 
         repairOrder = new RepairOrder(customerDTO, "123Drygt", "Bell is broken");
 
@@ -43,7 +40,6 @@ public class RepairOrderTest {
     {
         creator = null;
         customerDTO = null;
-        customer = null;
         repairOrder = null;
         bikes = null;
         repairOrderRegistry = null;
@@ -84,7 +80,7 @@ public class RepairOrderTest {
         int costToRepair = 6767;
         RepairTaskDTO newRepairTask = new RepairTaskDTO(repairTaskProblemDesc, costToRepair);
         repairOrder.addRepairTask(repairTaskProblemDesc, costToRepair);
-        boolean result = newRepairTask.equals(repairOrder.getDiagnosticReport().getRepairTasks().get(0));
+        boolean result = newRepairTask.equals(repairOrder.getDiagnosticReport().getRepairTasks().getFirst());
         assertTrue(result);
     }
 }
